Fix model and scroll on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 :root {
   --blue: #0071e3;
+  overflow-x: hidden;
 }
 * {
   margin: 0;
